--- a/css/screen.css
+++ b/css/screen.css
@@ -292,7 +292,8 @@ input::placeholder {
 .o-container {
     margin-left: auto;
     margin-right: auto;
-    max-width: 79.5em; /* 79.5 * 16px = 1272 */
+    max-width: 79.5em;
+    /* 79.5 * 16px = 1272 */
     width: 100%;
 }
 
@@ -306,19 +307,20 @@ input::placeholder {
     position: relative;
 }
 
-.o-section + .o-section {
+.o-section+.o-section {
     padding-top: 24px;
 }
 
 @media (min-width: 768px) {
-    .o-section--lg + .o-section--lg,
-    .o-section--xl + .o-section--xl {
+
+    .o-section--lg+.o-section--lg,
+    .o-section--xl+.o-section--xl {
         padding-top: 48px;
     }
 }
 
 @media (min-width: 992px) {
-    .o-section--xl + .o-section--xl {
+    .o-section--xl+.o-section--xl {
         padding-top: 72px;
     }
 }
@@ -348,7 +350,7 @@ input::placeholder {
     margin: 0 -12px;
 }
 
-.o-layout--gutter > .o-layout__item {
+.o-layout--gutter>.o-layout__item {
     padding: 0 12px;
 }
 
@@ -356,7 +358,7 @@ input::placeholder {
     margin: 0 -6px;
 }
 
-.o-layout--gutter-sm > .o-layout__item {
+.o-layout--gutter-sm>.o-layout__item {
     padding: 0 6px;
 }
 
@@ -364,7 +366,7 @@ input::placeholder {
     margin: 0 -24px;
 }
 
-.o-layout--gutter-lg > .o-layout__item {
+.o-layout--gutter-lg>.o-layout__item {
     padding: 0 24px;
 }
 
@@ -372,7 +374,7 @@ input::placeholder {
     margin: 0 -48px;
 }
 
-.o-layout--gutter-xl > .o-layout__item {
+.o-layout--gutter-xl>.o-layout__item {
     padding: 0 48px;
 }
 
@@ -555,7 +557,7 @@ input::placeholder {
     background-color: white;
     margin-bottom: 24px;
     border-radius: var(--radius);
-    box-shadow: 0 0 0 1px rgba(0,0,0, 0.05), 0 2px 4px rgba(0,0,0,.075);
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 2px 4px rgba(0, 0, 0, .075);
     overflow: hidden;
 }
 
@@ -563,7 +565,8 @@ input::placeholder {
 .c-card__body,
 .c-card__footer {
     padding: 24px 24px 0;
-    overflow: auto; /* Fix margin collapse */
+    overflow: auto;
+    /* Fix margin collapse */
 }
 
 .c-card__footer {
@@ -702,11 +705,11 @@ input::placeholder {
 */
 
 .c-option-list {
-
+    margin-bottom: 24px;
 }
 
 .c-option-list__item {
-
+    margin-bottom: 12px;
 }
 
 /*
@@ -714,11 +717,70 @@ input::placeholder {
     ---
     Custom checkboxes & radio buttons
 */
+.c-custom-input-option__symbol {
+    display: block;
+    -webkit-transition: all 100ms cubic-bezier(0.000, 0.000, 0.580, 1.000);
+    -moz-transition: all 100ms cubic-bezier(0.000, 0.000, 0.580, 1.000);
+    -o-transition: all 100ms cubic-bezier(0.000, 0.000, 0.580, 1.000);
+    transition: all 100ms cubic-bezier(0.000, 0.000, 0.580, 1.000);
+    /* ease-out */
+    -webkit-transition-timing-function: cubic-bezier(0.000, 0.000, 0.580, 1.000);
+    -moz-transition-timing-function: cubic-bezier(0.000, 0.000, 0.580, 1.000);
+    -o-transition-timing-function: cubic-bezier(0.000, 0.000, 0.580, 1.000);
+    transition-timing-function: cubic-bezier(0.000, 0.000, 0.580, 1.000);
+    /* ease-out */
+    opacity: 0;
+}
+
+.c-custom-input-option-label {
+    display: flex;
+}
+
+.c-custom-input-option {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 16px;
+    border: 1px solid var(--color-neutral-xxx-light);
+    margin-right: 8px;
+    /* box-shadow: var(--inset-shadow); */
+    margin-bottom: 8px;
+}
+
+.c-custom-input-option:focus, .c-custom-input-option:active {
+    box-shadow: 0px 0px 0px 3px rgba(51,133,255,0.2);
+    border-color: var(--color-alpha-x-light);
+}
+
+.c-custom-input-option:hover {
+    border-color: var(--color-alpha-x-light);
+}
+
+.c-custom-input-option--checkbox {
+    border-radius: var(--radius);
+}
+
+.c-custom-input-option--radio {
+    border-radius: 100%;
+}
+
+.c-custom-input-option--checkbox .c-custom-input-option__symbol {
+    width: 10px;
+    height: 10px;
+    fill: var(--color-alpha);
+}
+
+.c-custom-input-option--radio .c-custom-input-option__symbol {
+    width: 6px;
+    height: 6px;
+    background-color: var(--color-alpha);
+    border-radius: 100%;
+}
 
 /* Hide the actual input with the class .o-hide-accessible */
 
 /* checked state */
-
 .c-custom-input-option-hidden:checked + .c-custom-input-option-label {
     /*
         Do magic stuff here, for example:
@@ -726,11 +788,125 @@ input::placeholder {
     */
 }
 
-.c-custom-input-option-hidden:checked + .c-custom-input-option-label .c-custom-input-option__symbol {
+.c-custom-input-option-hidden:checked + .c-custom-input-option-label .c-custom-input-option {
+    /*
+        Do magic stuff here, for example:
+        background-color: red;
+    */
+    box-shadow: 0px 0px 0px 3px rgba(51,133,255,0.2);
+    border-color: var(--color-alpha-x-light);
+}
+
+.c-custom-input-option-hidden:checked+.c-custom-input-option-label .c-custom-input-option__symbol {
     /*
         Do magic stuff here, for example:
         fill: blue;
     */
+    -webkit-transition: all 100ms cubic-bezier(0.420, 0.000, 1.000, 1.000);
+    -moz-transition: all 100ms cubic-bezier(0.420, 0.000, 1.000, 1.000);
+    -o-transition: all 100ms cubic-bezier(0.420, 0.000, 1.000, 1.000);
+    transition: all 100ms cubic-bezier(0.420, 0.000, 1.000, 1.000);
+    /* ease-in */
+    -webkit-transition-timing-function: cubic-bezier(0.420, 0.000, 1.000, 1.000);
+    -moz-transition-timing-function: cubic-bezier(0.420, 0.000, 1.000, 1.000);
+    -o-transition-timing-function: cubic-bezier(0.420, 0.000, 1.000, 1.000);
+    transition-timing-function: cubic-bezier(0.420, 0.000, 1.000, 1.000);
+    /* ease-in */
+    opacity: 1;
+}
+
+/*
+    Custom Checkbox: Toggle
+    ---
+*/
+.c-toggle-list__item {
+    margin-bottom: 16px;
+}
+
+.c-toggle__label {
+    display: flex;
+    align-items: center;
+}
+
+.c-toggle__input {
+    display: block;
+    margin-right: 8px;
+    border-radius: 50px;
+    height: 24px;
+    width: 48px;
+    background-color: var(--color-neutral-xxxx-light);
+    border: 1px solid var(--color-neutral-xxx-light);
+    transition: all var(--transition-alpha);
+}
+
+.c-toggle__input::after {
+    content: " ";
+    display: block;
+    background-color: #FFF;
+    border-radius: 100%;
+    width: 22px;
+    height: 22px;
+    box-shadow: 0px 1px 3px rgba(0,0,0,0.16);
+    transition: all var(--transition-alpha);
+}
+
+.c-toggle__checkbox-hidden:hover + .c-toggle__label .c-toggle__input {
+    box-shadow: 0px 0px 0px 2px rgba(51,133,255,0.2);
+    border-color: var(--color-alpha-x-light);
+}
+
+.c-toggle__checkbox-hidden:checked + .c-toggle__label .c-toggle__input {
+    border-color: var(--color-alpha-dark);
+    background-color: var(--color-alpha);
+}
+
+.c-toggle__checkbox-hidden:checked + .c-toggle__label .c-toggle__input::after {
+    transform: translateX(24px);
+}
+
+.c-toggle__input--alternative {
+    display: flex;
+    align-items: center;
+    border-color: #FFF;
+    background-color: var(--color-neutral-xxx-light);
+    width: 40px;
+    height: 20px;
+}
+
+.c-toggle__checkbox-hidden:focus + .c-toggle__label--inverted .c-toggle__input--alternative {
+    box-shadow: none;
+    border-color: #FFF;
+}
+
+.c-toggle__checkbox-hidden:focus + .c-toggle__label--inverted .c-toggle__input--alternative::after {
+    box-shadow: 0px 0px 0px 3px rgba(51,133,255,0.2);
+    border: 1px solid var(--color-alpha-x-light);
+}
+
+.c-toggle__checkbox-hidden:checked + .c-toggle__label--inverted .c-toggle__input--alternative {
+    border-color: #FFF;
+    background-color: var(--color-alpha-xx-light);
+}
+
+.c-toggle__checkbox-hidden:checked + .c-toggle__label--inverted .c-toggle__input--alternative::after {
+    border-color: var(--color-alpha-dark);
+    background-color: var(--color-alpha);
+}
+
+/* Custom Dropdown */
+
+.c-custom-select {
+    display: flex;
+    align-items: center;
+}
+
+.c-custom-select__symbol {
+    width: 24px;
+    height: 24px;
+    fill: var(--color-neutral-x-light);
+    position: absolute;
+    right: 16px;
+    pointer-events: none;
 }
 
 /*------------------------------------*\
@@ -894,33 +1070,43 @@ input::placeholder {
     .u-1-of-2-bp1 {
         width: 50% !important;
     }
+
     .u-1-of-3-bp1 {
         width: 33.3333333333% !important;
     }
+
     .u-2-of-3-bp1 {
         width: 66.6666666667% !important;
     }
+
     .u-1-of-4-bp1 {
         width: 25% !important;
     }
+
     .u-3-of-4-bp1 {
         width: 75% !important;
     }
+
     .u-1-of-5-bp1 {
         width: 20% !important;
     }
+
     .u-2-of-5-bp1 {
         width: 40% !important;
     }
+
     .u-3-of-5-bp1 {
         width: 60% !important;
     }
+
     .u-4-of-5-bp1 {
         width: 80% !important;
     }
+
     .u-1-of-6-bp1 {
         width: 16.6666666667% !important;
     }
+
     .u-5-of-6-bp1 {
         width: 83.3333333333% !important;
     }
@@ -930,33 +1116,43 @@ input::placeholder {
     .u-1-of-2-bp2 {
         width: 50% !important;
     }
+
     .u-1-of-3-bp2 {
         width: 33.3333333333% !important;
     }
+
     .u-2-of-3-bp2 {
         width: 66.6666666667% !important;
     }
+
     .u-1-of-4-bp2 {
         width: 25% !important;
     }
+
     .u-3-of-4-bp2 {
         width: 75% !important;
     }
+
     .u-1-of-5-bp2 {
         width: 20% !important;
     }
+
     .u-2-of-5-bp2 {
         width: 40% !important;
     }
+
     .u-3-of-5-bp2 {
         width: 60% !important;
     }
+
     .u-4-of-5-bp2 {
         width: 80% !important;
     }
+
     .u-1-of-6-bp2 {
         width: 16.6666666667% !important;
     }
+
     .u-5-of-6-bp2 {
         width: 83.3333333333% !important;
     }
@@ -966,33 +1162,43 @@ input::placeholder {
     .u-1-of-2-bp3 {
         width: 50% !important;
     }
+
     .u-1-of-3-bp3 {
         width: 33.3333333333% !important;
     }
+
     .u-2-of-3-bp3 {
         width: 66.6666666667% !important;
     }
+
     .u-1-of-4-bp3 {
         width: 25% !important;
     }
+
     .u-3-of-4-bp3 {
         width: 75% !important;
     }
+
     .u-1-of-5-bp3 {
         width: 20% !important;
     }
+
     .u-2-of-5-bp3 {
         width: 40% !important;
     }
+
     .u-3-of-5-bp3 {
         width: 60% !important;
     }
+
     .u-4-of-5-bp3 {
         width: 80% !important;
     }
+
     .u-1-of-6-bp3 {
         width: 16.6666666667% !important;
     }
+
     .u-5-of-6-bp3 {
         width: 83.3333333333% !important;
     }
@@ -1002,33 +1208,43 @@ input::placeholder {
     .u-1-of-2-bp4 {
         width: 50% !important;
     }
+
     .u-1-of-3-bp4 {
         width: 33.3333333333% !important;
     }
+
     .u-2-of-3-bp4 {
         width: 66.6666666667% !important;
     }
+
     .u-1-of-4-bp4 {
         width: 25% !important;
     }
+
     .u-3-of-4-bp4 {
         width: 75% !important;
     }
+
     .u-1-of-5-bp4 {
         width: 20% !important;
     }
+
     .u-2-of-5-bp4 {
         width: 40% !important;
     }
+
     .u-3-of-5-bp4 {
         width: 60% !important;
     }
+
     .u-4-of-5-bp4 {
         width: 80% !important;
     }
+
     .u-1-of-6-bp4 {
         width: 16.6666666667% !important;
     }
+
     .u-5-of-6-bp4 {
         width: 83.3333333333% !important;
     }
@@ -1074,6 +1290,7 @@ No media query since this is the default in mobile first design
 */
 
 @media print {
+
     *,
     *:before,
     *:after {
@@ -1084,16 +1301,20 @@ No media query since this is the default in mobile first design
         box-shadow: none !important;
         text-shadow: none !important;
     }
+
     a,
     a:visited {
         text-decoration: underline;
     }
+
     a[href]:after {
-        content: " (" attr(href) ")";
+        content: " ("attr(href) ")";
     }
+
     abbr[title]:after {
-        content: " (" attr(title) ")";
+        content: " ("attr(title) ")";
     }
+
     /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
@@ -1102,14 +1323,17 @@ No media query since this is the default in mobile first design
     a[href^="javascript:"]:after {
         content: "";
     }
+
     pre {
         white-space: pre-wrap !important;
     }
+
     pre,
     blockquote {
         border: 1px solid #999;
         page-break-inside: avoid;
     }
+
     /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
@@ -1117,16 +1341,19 @@ No media query since this is the default in mobile first design
     thead {
         display: table-header-group;
     }
+
     tr,
     img {
         page-break-inside: avoid;
     }
+
     p,
     h2,
     h3 {
         orphans: 3;
         widows: 3;
     }
+
     h2,
     h3 {
         page-break-after: avoid;
